--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "clsx": "^2.1.1",
     "convex": "^1.19.2",
     "date-fns": "^4.1.0",
+    "fs": "^0.0.1-security",
     "jotai": "^2.12.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.1",
@@ -37,6 +39,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
